--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
    <div class="content wrapper">
         <main class="main">
             <div class="main-title">
-                <img src="image/logo.JPG" alt="学術サーバー" class="main-logo">
+                <div class="main-image"><img src="image/logo.JPG" alt="学術サーバー" class="main-logo"></div>
+                
                 <div class="main-word">
                         <h1>ようこそ！！<br>
                             名大学術サーバーへ</h1>
@@ -53,7 +54,7 @@
                     <h2>学術サーバーでゼミをする</h2>
                     <p>
                         学術サーバーでは、どんなゼミでも開催できます。<br>
-                        学術サーバーは、学生が自由にゼミを開催できる場所です。<br>
+                        どんなゼミも自由に開催できます！<br>
                         気になるゼミに参加してみましょう。
                     </p>  
                 </div>
@@ -125,7 +126,8 @@
             <div id="contact" class="sns">
                 <div class="LINE">
                     <h2>お問い合わせ</h2>
-                    <p>LINEで学術サーバーの最新情報と質問にお答えします! 公式ラインへのご登録をお願いします！</p>
+                    <p>LINEで学術サーバーの最新情報と質問にお答えします! <br>
+                        公式ラインへのご登録をお願いします！</p>
                         <div class="LINE-register">
                             <img src="image/line.png" alt="LINEのQRコード" class="sns-img">
                             <div class="button">
@@ -136,7 +138,7 @@
                 <div class="twitter">
                     <h2>Twitter</h2>
                     <p>Twitterでも学術サーバーの最新情報をお知らせします！ご質問や加入したいという場合はDMにてご連絡ください。</p>
-                    <a class="twitter-timeline" data-width="600" data-height="400" data-theme="light" href="https://twitter.com/Gaku_NU?ref_src=twsrc%5Etfw">Tweets by Gaku_NU</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <a class="twitter-timeline" data-width="100%" data-height="400" data-theme="light" href="https://twitter.com/Gaku_NU?ref_src=twsrc%5Etfw">Tweets by Gaku_NU</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </div>
             
