--- a/index.html
+++ b/index.html
@@ -36,12 +36,10 @@
             <div class="main-explain-content">
                 <div class="main-explain-text">
                    <h2>学術サーバーとは</h2>
-                <p>学術サーバーは、名古屋大学の学生が自由にゼミを開催できる場所です。<br>
-                    どんなゼミでも開催できます。例えば、確率論のゼミ、量子力学ゼミ、<br>
-                    アイヌ語ゼミ、有機化学ゼミ、哲学ゼミ、プログラミングゼミ、<br>
-                    経済学ゼミ、金融ゼミ、
-                    などなど、何でもOKです。<br>
-                    また、新歓企画も行います。新入生の皆さん、ぜひ参加してください。<br>
+                <p>学術サーバーは、名古屋大学の学生が自由にゼミを開催できる場です。<br>
+                    どんなゼミでも開催できます。<br>
+                    例えば、量子力学ゼミ、アイヌ語ゼミ、有機化学ゼミ、哲学ゼミ、<br>
+                    プログラミングゼミ、経済学ゼミなどなど、様々なゼミが開かれています！
                     さあ、あなたもゼミに参加・開催してみませんか？</p> 
                 </div>            
                 <img src="image/explain.jpg" alt="ゼミの写真を挿入" class="main-explain-img">
