エクスクラメーションマークの変更

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="main-image"><img src="image/logo.JPG" alt="学術サーバー" class="main-logo"></div>
                 
                 <div class="main-word">
-                        <h1>ようこそ！！<br>
+                        <h1>ようこそ！<br>
                             名大学術サーバーへ</h1>
                 </div>
             </div>
