--- a/newcommer.html
+++ b/newcommer.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     
-    <title>学術サーバー</title>
+    <title>学術サーバー : 新歓企画</title>
 </head>
 <body class="wrapper">
    <header class="header">
