--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
+<head prefix="og: http://ogp.me/ns#">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
 
-    <meta name=”description” content=” 学術サーバーは名大のゼミコミュニティです! DisCordで活動しています! ゼミに入りたい方・ゼミをやってみたい方大歓迎です！”>
-
+    <meta name=”description” content=” 学術サーバーは名古屋大学のゼミコミュニティです!  勉強好きな方・ゼミに入りたい方・ゼミをやってみたい方大歓迎です！ ”>
+    <!-- メタプロパティ OGP-->
+    <meta property="og:site_name" content="名大学術サーバーホームページ">
+    <meta property="og:title" content="学術サーバーホーム">
+    <meta property="og:description" content="学術サーバーは名古屋大学のゼミコミュニティです!  勉強好きな方・ゼミに入りたい方・ゼミをやってみたい方大歓迎です！">
+    <meta property="og:url" content="https://gakusabanu.github.io/gakusaba/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://gakusabanu.github.io/gakusaba/image/logo.JPG">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@Gaku_NU">
 
     <title>学術サーバー : ホームページ</title>
 </head>
