--- a/zemi.html
+++ b/zemi.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+
+     <!-- メタプロパティ OGP-->
+     <meta property="og:site_name" content="名大学術サーバー:新歓企画">
+     <meta property="og:title" content="学術サーバー新歓企画">
+     <meta property="og:description" content="学術サーバーは名古屋大学のゼミコミュニティです!  このページでは現在開催されているゼミの一覧を見ることができます。気になったゼミがあれば参加してみましょう！">
+     <meta property="og:url" content="https://gakusabanu.github.io/gakusaba/">
+     <meta property="og:type" content="website">
+     <meta property="og:image" content="https://gakusabanu.github.io/gakusaba/image/logo.JPG">
+     <meta name="twitter:card" content="summary_large_image">
+     <meta name="twitter:site" content="@Gaku_NU">
     
     <title>学術サーバー : ゼミ一覧</title>
 </head>
