--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="twitter:site" content="@Gaku_NU">
 
     <meta name='keywords' content='ゼミ 名古屋大学 物理学 数学 生物学 理学部 経済学部 農学部 哲学 化学 地球惑星科学 宇宙科学 プログラミング 教育学 DisCordコミュニティ インターカレッジ'>
+    <link rel="icon" href="image/logo.png">
 
     <title>学術サーバー : ホームページ</title>
 </head>
