--- a/newcommer.html
+++ b/newcommer.html
@@ -15,6 +15,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@Gaku_NU">
     
+    <link rel="icon" href="image/logo.png">
+    
     <title>学術サーバー : 新歓企画</title>
 </head>
 <body class="wrapper">
