--- a/newcommer.html
+++ b/newcommer.html
@@ -26,7 +26,7 @@
         </a>
         <div class="header-item">
             <div  class="header-title">
-                <p class="header-explain">自主ゼミがしやすい場を提供する</p>
+                <p class="header-explain">自主ゼミをするためのコミュニティ</p>
                 <div class="header-name">名大学術サーバー</div>
                
             </div>
