fix  header pageの変更

--- a/newcommer.html
+++ b/newcommer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <meta name=”description” content=” 学術サーバーは名古屋大学のゼミコミュニティです!  勉強好きな方・ゼミに入りたい方・ゼミをやってみたい方大歓迎です！ ”>
+    <meta name=”description” content=” 学術サーバーは名古屋大学のゼミコミュニティです! このページでは現在行われている新歓についての情報を作っています！ 勉強好きな方・ゼミに入りたい方・ゼミをやってみたい方大歓迎です！ ”>
     <!-- メタプロパティ OGP-->
     <meta property="og:site_name" content="名大学術サーバー:新歓企画">
     <meta property="og:title" content="学術サーバー新歓企画">
@@ -346,6 +346,7 @@
                 </ul>
         </aside>
     </div>
+    <!-- footer -->
     <footer>
         <div class="footer">
             <div class="footer-name">
