delete explain 画像

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     さあ、あなたもゼミに参加・開催してみませんか？
                     </p>
                 </div>
-                <img src="image/explain.jpg" alt="ゼミの写真を挿入" class="main-explain-img">
+                <!-- <img src="image/explain.jpg" alt="ゼミの写真を挿入" class="main-explain-img"> -->
            
            </div> <!-- 学術サーバーの説明終わり -->
 
