--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
                 </div>
                 <!-- <img src="image/explain.jpg" alt="ゼミの写真を挿入" class="main-explain-img"> -->
            
-           </div> <!-- 学術サーバーの説明終わり -->
+           </div> 
+           <!-- 学術サーバーの説明終わり -->
 
 
-              <!-- ゼミ一覧 -->
+            <!-- ゼミ一覧 -->
             <div class="wellcome-zemi">
                 <div>
                     <h2>学術サーバーでゼミをする</h2>
