add newcommer 勉強会

--- a/newcommer.html
+++ b/newcommer.html
@@ -293,8 +293,7 @@
                     お申し込みはこちら
                     </a>
                 </div>
-                <h3>ポスター</h3>
-                <p>Comming Soon...</p>
+                <img src="newcommer/zemi.png" alt="短期ゼミ体験会のポスター" class="plan-image">
             </div>
 
             <div class="plan-item" id="latex-environment">
