--- a/newcommer.html
+++ b/newcommer.html
@@ -251,9 +251,9 @@
             <div class="plan-item" id="server-explain">
                 <h2>学術サーバー説明会</h2>
                 <h3>概要</h3>
-                <p>学術サーバー説明会は学術サーバーの概要を説明します。</p>
+                <p>学術サーバーの紹介、大学の学問についてのプレゼン、相談会を実施します！</p>
                 <h3>日程・時間</h3>
-                <p>Comming Soon...</p>
+                <p>４月上旬～５月上旬の計３回</p>
                 <h3>募集フォーム</h3>
                 <div class="button">
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfRIKNM0lGlKUM9nkhdUmjqXy1PXjX5aUX9qDZ0Ebdvi_e39A/viewform?usp=sharing
@@ -261,14 +261,15 @@
                     お申し込みはこちら
                     </a>
                 </div>
-                <img src="newcommer/gakusaba_explain.png" alt="学術サーバー説明会">
+                <img src="" alt="学術サーバー説明会">
                 
             </div>
 
             <div class="plan-item" id="course-completion">
                 <h2>履修登録説明会</h2>
                 <h3>概要</h3>
-                <p>履修登録説明会は履修登録の方法を説明します。</p>
+                <p>理学部新入生を対象に履修登録説明会を行います!<br>
+                    学科分属、授業のことなどぜひ聞きに来てください！</p>
                 <h3>日程・時間・場所</h3>
                 <p>4/2, 4/3 理学部A館</p>
                 <h3>募集フォーム</h3>
@@ -284,9 +285,10 @@
             <div class="plan-item" id="short-term-seminar">
                 <h2>短期ゼミ体験会</h2>
                 <h3>概要</h3>
-                <p>短期ゼミ体験は短期間でゼミを体験できます。</p>
+                <p>各ゼミ４回からなる自主ゼミを開催します！<br>
+                    大学の数学、物理、化学をゼミ形式で学んでみませか？</p>
                 <h3>日程・時間</h3>
-                <p>Comming Soon...</p>
+                <p>４月中旬～５月下旬</p>
                 <h3>募集フォーム</h3>
                 <div class="button">
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeNGNalTGre5YHIylirzas3De448bG6aZ6bBhvPZq1nYDcKiA/viewform?usp=sharing">
