--- a/newcommer.html
+++ b/newcommer.html
@@ -261,7 +261,7 @@
                     お申し込みはこちら
                     </a>
                 </div>
-                <img src="" alt="学術サーバー説明会">
+                <img src="" alt="Comming Soon...">
                 
             </div>
 
