--- a/newcommer.html
+++ b/newcommer.html
@@ -154,7 +154,7 @@
                           <td class="library">27</td>
                           <td>28</td>
                           <td>29</td>
-                          <td class="today">30</td>
+                          <td>30</td>
                         </tr>
                         <tr>
                             <td>31</td>
@@ -184,7 +184,7 @@
                                 <td class="mute">31</td>
                                 <td>1</td>
                                 <td>2</td>
-                                <td>3</td>
+                                <td class="today">3</td>
                                 <td>4</td>
                                 <td>5</td>
                                 <td>6</td>
@@ -302,16 +302,30 @@
                 <h2>LaTeX勉強会</h2>
                 <h3>概要</h3>
                 <p>LaTeX勉強会はLaTeX環境を構築します。</p>
+                <p>
+                    ゼミやレポートをもっときれいにかきたい！美しいレイアウトで書きたい！と思ったことはありませんか？
+                </p>
+                <p>
+                    Wordよりも美しい数式と美しいレイアウトを簡単に作ることができるLaTeXはそんな方にとって心強い味方になります！ 
+                </p>
+                <p>
+                    この会にこればWebSiteでLaTeXの環境構築資料を探して回る必要はありません！すべて一からサポートします！
+                </p>
+                <p>
+                    そしてすでにLaTeXを使われている方もより便利な機能やLaTeXをフル活用する方法を教えます！ぜひ来てください！
+                </p>
+                    
+            
                 <h3>日程・時間</h3>
-                <p>5/19 14:00~18:00</p>
+                <p>5/19 14:00~17:00</p>
                 <h3>募集フォーム</h3>
                 <div class="button">
-                    <a href="">
-                    Comming Soon...
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjzeMiyTjMwzmtWl26M8JqTGMkHYxY1nJRcPweGlkOVxHMCw/viewform?usp=sharing">
+                    お申し込みはこちら
                     </a>
                 </div>
                 <h3>ポスター</h3>
-                <p>Comming Soon...</p>
+                <img src="newcommer/LaTeX.png" alt="LaTeX勉強会のポスター" class="plan-image">
             </div>
 
 
