ホームページ更新

--- a/newcommer.html
+++ b/newcommer.html
@@ -90,7 +90,7 @@
                 
             </div>
 
-            <div class="plan-item" id="short-term-seminar">
+            <div class="plan-item" id="campass-tour">
                 <h2>
                     キャンパスツアー
                 </h2>
